--- a/SiteTestApp/static/css/styles.css
+++ b/SiteTestApp/static/css/styles.css
@@ -4,8 +4,7 @@ body {
     background-color: #1a1a1a;
     color: #fff;
     font-family: Arial, sans-serif;
-    margin-top: 10%;
-    padding: 0;
+    padding: 10%;
 }
 
 .container {
@@ -13,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 10vh;
+    margin-top: 10%;
 }
 
 .search-container {
