--- a/SiteTestApp/templates/index.html
+++ b/SiteTestApp/templates/index.html
@@ -4,6 +4,101 @@
 <head>
     <title>Website Tester</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <style>
+        /* styles.css */
+
+body {
+    background-color: #1a1a1a;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    padding: 10%;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    margin-top: 10%;
+}
+
+.search-container {
+    position: relative;
+    margin: 20px auto;
+    max-width: 600px;
+    text-align: center;
+}
+
+#url-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 300px;
+}
+
+.search-button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    font-size: 16px;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 12px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+}
+
+/* Style for the submit button */
+button.submit-button {
+    padding: 8px 15px;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    width: 100px; /* Add this line to set the button width */
+    margin-left: -27%;
+}
+
+button.submit-button:hover {
+    background-color: #555;
+}
+
+/* Styles specific to phones */
+@media (max-width: 767px) {
+    .search-button {
+        position: relative;
+        /* Adjust other styles for phones as needed */
+    }
+
+    button.submit-button {
+        width: 75%; 
+        margin-top: 5%; /* Specify the top margin as needed */
+        margin-right: auto; /* Set right margin to auto */
+        margin-bottom: auto; /* Set bottom margin to auto */
+        margin-left: auto; /* Set left margin to auto */
+        max-width: 600px;
+        text-align: center;
+        
+    }
+}
+    </style>
 </head>
 <body>
     {% include 'header.html' %}
