--- a/SiteTestApp/templates/footer.html
+++ b/SiteTestApp/templates/footer.html
@@ -1,5 +1,6 @@
 <footer style="background-color: black; 
                 color: white; padding: 20px; 
+                width: 100%;
                 text-align: center;
                 position: absolute;
                 bottom: 0;">
