--- a/SiteTestApp/templates/footer.html
+++ b/SiteTestApp/templates/footer.html
@@ -1,8 +1,10 @@
 <footer style="background-color: black; 
-                color: white; padding: 20px; 
+                color: white; 
+                padding: 20px; 
                 width: 100%;
                 text-align: center;
-                position: absolute;
+                position: relative;
+                margin-top: 25px;
                 bottom: 0;">
-    &copy; 2023 https://sitetester.azurewebsites.net/. All rights reserved.
-</footer>
+        &copy; 2023 https://sitetester.azurewebsites.net/. All rights reserved.
+    </footer>
