--- a/SiteTestApp/templates/header.html
+++ b/SiteTestApp/templates/header.html
@@ -1,3 +1,6 @@
-<header style="background-color: black; color: white; padding: 20px; text-align: center;">
+<header style="background-color: black; color: white; padding: 20px; 
+                text-align: center;
+                width:100%;
+                margin-bottom: 10vh;">
     <h1>Website Metric Reporter</h1>
 </header>
