--- a/SiteTestApp/templates/index.html
+++ b/SiteTestApp/templates/index.html
@@ -14,11 +14,18 @@ body {
     margin: 0%;
 }
 
+.body-without-footer {
+    position: relative;
+    min-height: 100vh;
+}
+
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 10vh;
+    align-items:top;
+    min-height: 10vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 .search-container {
@@ -107,14 +114,15 @@ button.submit-button:hover {
 }
 
     .loading-icon {
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background-color: #fff;
         animation: pulse 1s ease-in-out infinite;
         display: none;
     }
 
+    
 /* Styles specific to phones */
 @media (max-width: 767px) {
     .search-button {
@@ -135,70 +143,409 @@ button.submit-button:hover {
 
    
 }
+.results-container {
+    background-color: #555;
+    min-height: 10vh;
+    max-width: 75%;
+    width: fit-content;
+    margin: auto;
+    border-radius: 4px;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+    }
+
+.score-circles {
+    display: flex;
+    }
+    .result h4 {
+        margin: 0;
+        }
+
+
+    .results-circle {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 4px solid #ccc;
+        margin: 10px;
+        transition: width 0.3s ease, height 0.3s ease;
+    }
+
+    .score {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        font-weight: bold;
+        width: 80px;
+        height: 80px;
+    }
+
+    .results-row {
+        display: flex;
+        align-items: center;
+        width: fit-content;
+        }
+
+        .rows-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 10px;
+            gap: 20px;
+        }
+
+        .results-circle {
+            --border-width: 4px;
+            position: relative;
+            width: 85px;
+            height: 85px;
+            border-radius: 50%;
+            border: var(--border-width) solid #ccc;
+            margin: 10px;
+            box-sizing: border-box; /* Add this line */
+            transition: width 0.3s ease, height 0.3s ease;
+        }
+            .score::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #4caf50;
+            transform-origin: left;
+            transform: scaleX(var(--percentage, 0));
+            }
+    .result {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .score-circles {
+        display: flex;
+        }
+
+
+        .flex-wrapper {
+            display: flex;
+            flex-flow: row nowrap;
+        }
+
+        .single-chart {
+            width: 33%;
+            justify-content: space-around;
+        }
+
+        .circular-chart {
+            display: block;
+            margin: 10px auto;
+            max-width: 80%;
+            max-height: 250px;
+        }
+
+        .circle-bg {
+            fill: none;
+            stroke: #eee;
+            stroke-width: 3.8;
+        }
+
+        .circle {
+            fill: none;
+            stroke-width: 2.8;
+            stroke-linecap: round;
+            animation: progress 1s ease-out forwards;
+        }
+
+        @keyframes progress {
+            0% {
+                stroke-dasharray: 0 100;
+            }
+        }
+
+        .percentage {
+            fill:white;
+            font-family: sans-serif;
+            font-size: 0.5em;
+            text-anchor: middle;
+        }
+
+        .percentage-circle {
+            width: 80px;
+            height: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            margin: 10px;
+            position: relative;
+        }
+
+        .percentage-circle .circle-bg {
+            stroke: #eee;
+        }
+
+        .percentage-circle .circle {
+            stroke-linecap: round;
+            animation: progress 1s ease-out forwards;
+        }
+
+
+        .percentage-circle .percentage {
+            fill: #ffffff;
+            font-family: sans-serif;
+            font-size: 0.4em;
+            text-anchor: middle;
+        }
+
+        @keyframes progress {
+            0% {
+                stroke-dasharray: 0 100;
+            }
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+                transform-origin: center;
+            }
+            to {
+                transform: rotate(360deg);
+                transform-origin: center;
+            }
+        }
+
+        @keyframes fill {
+            to {
+                stroke: #00ff00;
+            }
+        }
+
     </style>
 </head>
 <body>
+    <div class="body-without-footer">
     {% include 'header.html' %}
     <div class="container">
-        <form id="ttfb-form">
+        <form id="test-form">
             <div class="search-container">
                 <input type="text" name="url" id="url-input" placeholder="Enter a URL">
-                <button type="submit" class="submit-button" onclick="startLoading()">Test Site</button>
+                <button type="submit" class="submit-button">Test Site</button>
             </div>
         </form>
     </div>
 
     <div class="container">
         <div class="loading-icon"></div>
-        <h3 id="ttfb-result">
-
-        </h3>
     </div>
 
+    <div class="results-container">
+        <div class="rows-container">
+            <div class="result">
+                <h4>TTFB</h4>
+                    <div class="percentage-circle" id="ttfb-result-circle">
+                        <svg class="circular-chart" viewBox="0 0 36 36">
+                            <path class="circle-bg" d="M18 2.0845
+                                a 15.9155 15.9155 0 0 1 0 31.831
+                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                        
+                            <!-- Transparent circle with full white border -->
+                            <path class="circle" stroke="#fff" d="M18 2.0845
+                                a 15.9155 15.9155 0 0 1 0 31.831
+                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                        
+                            <!-- Percentage text -->
+                            <text x="18" y="20.5" class="percentage" id="ttfb-result" >0</text>
+                        </svg>
+                    </div>
+            </div>
+
+            <div class="result">
+                <h4>FCP</h4>
+                <div class="percentage-circle" id="fcp-result-circle">
+                    <svg class="circular-chart" viewBox="0 0 36 36">
+                        <path class="circle-bg" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Transparent circle with full white border -->
+                        <path class="circle" stroke="#fff" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Percentage text -->
+                        <text x="18" y="20.5" class="percentage" id="fcp-result">0</text>
+                    </svg>
+                </div>
+            </div>
+        </div>
+
+        <div class="rows-container">
+            <div class="result">
+                <h4>LCP</h4>
+                <div class="percentage-circle" id="lcp-result-circle">
+                    <svg class="circular-chart" viewBox="0 0 36 36">
+                        <path class="circle-bg" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Transparent circle with full white border -->
+                        <path class="circle" stroke="#fff" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Percentage text -->
+                        <text x="18" y="20.5" class="percentage">0</text>
+                    </svg>
+                </div>
+            </div>
+
+            <div class="result">
+                <h4>Speed</h4>
+                <div class="percentage-circle" id="speed-result-circle">
+                    <svg class="circular-chart" viewBox="0 0 36 36">
+                        <path class="circle-bg" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Transparent circle with full white border -->
+                        <path class="circle" stroke="#fff" d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    
+                        <!-- Percentage text -->
+                        <text x="18" y="20.5" class="percentage">0</text>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <script>
-       function startLoading() {
-            var loadingIcon = document.querySelector(".loading-icon");
-            loadingIcon.style.display = "block";
-        }
+        let isPulsing = true;
 
+function showLoadingIcon() {
+    var loadingIcon = document.querySelector(".loading-icon");
+    loadingIcon.style.display = "block";
+}
 
-        document.getElementById("ttfb-form").onsubmit = function (event) {
-            event.preventDefault();
-            var url = document.getElementById("url-input").value;
-            var loadingIcon = document.querySelector(".loading-icon");
-            loadingIcon.style.display = "block"; 
+function hideLoadingIcon() {
+    var loadingIcon = document.querySelector(".loading-icon");
+    loadingIcon.style.display = "none";
+}
 
-            fetch("/ttfb/?url=" + encodeURIComponent(url))
-                .then(response => response.json())
-                .then(data => {
-                    var remainingTime = 3000 - (Date.now() - startTime);
-                    if (remainingTime > 0) {
-                        setTimeout(() => {
-                            loadingIcon.style.display = "none"; 
-                            displayResult(data);
-                        }, remainingTime);
-                    } else {
-                        loadingIcon.style.display = "none"; 
-                        displayResult(data); 
-                    }
-                })
-                .catch(error => {
-                    loadingIcon.style.display = "none";
-                    document.getElementById("ttfb-result").innerHTML = "Error: Unable to fetch TTFB." + error.message;
-                });
-            
-            var startTime = Date.now();
-        };
+document.getElementById("test-form").onsubmit = function (event) {
+    event.preventDefault(); // Prevent form submission
+    var url = document.getElementById("url-input").value;
+    var loadingIcon = document.querySelector(".loading-icon");
+    loadingIcon.style.display = "block"; // Show the loading icon
+    isPulsing = true;
 
-        function displayResult(data) {
-            if (data.ttfb) {
-                document.getElementById("ttfb-result").innerHTML = "TTFB: " + data.ttfb + " milliseconds";
-            } else if (data.error) {
-                document.getElementById("ttfb-result").innerHTML = "Error: " + data.error;
+    setTimeout(function () {
+        isPulsing = false; // Set the flag to false after 3 seconds
+        loadingIcon.style.display = "none"; // Hide the loading icon after 3 seconds
+
+        fetch("/ttfb/?url=" + encodeURIComponent(url))
+            .then(response => response.json())
+            .then(data => {
+                if (isPulsing) {
+                    // If still pulsing, wait for the pulsing to complete
+                    setTimeout(function () {
+                        showResult(data);
+                    }, 100); // Delay showing result for 1 second
+                } else {
+                    showResult(data);
+                }
+            })
+            .catch(error => {
+                document.getElementById("ttfb-result").innerHTML =
+                    "Error: Unable to fetch TTFB." + error.message;
+            });
+    }, 3000); // 3000 milliseconds = 3 seconds
+};
+
+function calculateScore(metricValue, range1, score1, range2, score2) {
+  if (metricValue <= range1) {
+    return 100;
+  } else if (metricValue >= range2) {
+    return 0;
+  } else {
+    var percentage = 1 - (metricValue - range1) / (range2 - range1);
+    return Math.round(score1 + percentage * (score2 - score1));
+  }
+}
+
+   
+
+    function updatePercentageCircle(circleId, percentage) {
+        var circle = document.getElementById(circleId);
+        if (circle) {
+            circle.style.setProperty('--percentage', percentage + '%');
+            var textElement = circle.querySelector('.percentage');
+            if (textElement) {
+                textElement.textContent = percentage + '%';
             }
+        } else {
+            console.error('Element with ID ' + circleId + ' not found.');
         }
-        </script>
+    }
 
+    function resizeCircle(id, value) {
+        console.log(value);
+        var circle = document.getElementById(id);
+        var circleBorder = circle.querySelector('.circle');
+        var percentage = Math.max(0, Math.min(100, (value / 5000) * 100)); // Assuming the maximum value is 5000 milliseconds
+
+        // Set the stroke-dasharray attribute to control the percentage of the circle that is filled
+        var circumference = 2 * Math.PI * circle.getAttribute('r');
+        var filledLength = (percentage / 100) * circumference;
+        var unfilledLength = circumference - filledLength;
+
+        // Set the filling animation for the circle border
+        circleBorder.style.transition = 'stroke-dasharray 1s linear, transform 1s linear';
+        circleBorder.style.strokeDasharray = filledLength + ' ' + unfilledLength;
+        circleBorder.style.animation = 'spin 1s linear, fill 1s linear forwards';
+
+        }
+
+    function showResult(data) {
+        // TTFB
+        console.log(data);
+        if (data.ttfb) {
+            var ttfbValue = data.ttfb.toFixed(3);
+            var ttfbScore = calculateScore(ttfbValue, 600, 100, 5000, 0);
+            document.getElementById("ttfb-result").innerHTML = ttfbValue + " ms";
+            resizeCircle("ttfb-result-circle", ttfbScore);
+        } else if (data.error) {
+            document.getElementById("ttfb-result").innerHTML = "Error: " + data.error;
+        }
+
+        if (data.fcp) {
+            console.log(data.fcp + "fcp");
+            var fcpValue = data.fcp.toFixed(3);
+            var fcpScore = calculateScore(fcpValue, 1000, 100, 5000, 0); // Update the range and scores as needed
+            document.getElementById("fcp-result").innerHTML = fcpValue + " ms";
+            resizeCircle("fcp-result-circle", fcpScore);
+        } else if (data.error) {
+            document.getElementById("fcp-result").innerHTML = "Error: " + data.error;
+        }
+    
+        // Example: Call this function after fetching the data and calculating the score
+        // updatePercentageCircle('ttfb-result-circle', ttfbScore);
+        // updatePercentageCircle('fcp-result-circle', fcpScore);
+        // updatePercentageCircle('lcp-result-circle', lcpScore);
+        // updatePercentageCircle('speed-result-circle', speedScore);
+    }
+
+        </script>
+    </div>
     {% include 'footer.html' %}
 </body>
 </html>
