Testing svg changes

--- a/SiteTestApp/templates/index.html
+++ b/SiteTestApp/templates/index.html
@@ -130,6 +130,10 @@ button.submit-button:hover {
         width: auto;
     }
 
+    .container {
+        width: 80%;
+    }
+
     button.submit-button {
         width: 25%; 
         margin-top: 5%; 
@@ -142,7 +146,7 @@ button.submit-button:hover {
     }
 
     .results-circle {
-        display: block; /* Change display from flex to block */
+        display: block !important; /* Change display from flex to block */
         margin: auto; /* Center the circle */
         /* Add any other necessary styles for the result circles on mobile */
     }
