--- a/SiteTestApp/templates/index.html
+++ b/SiteTestApp/templates/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Website Tester</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">    <style>
 
@@ -148,6 +149,8 @@ button.submit-button:hover {
     .results-circle {
         display: block !important; /* Change display from flex to block */
         margin: auto; /* Center the circle */
+        width: 10%;
+        height: 10%;
         /* Add any other necessary styles for the result circles on mobile */
     }
 
@@ -200,38 +203,39 @@ button.submit-button:hover {
         display: flex;
         align-items: center;
         width: fit-content;
-        }
+    }
 
-        .rows-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 10px;
-            gap: 20px;
-        }
+    .rows-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 10px;
+        gap: 20px;
+    }
 
-        .results-circle {
-            --border-width: 4px;
-            position: relative;
-            width: 85px;
-            height: 85px;
-            border-radius: 50%;
-            border: var(--border-width) solid #ccc;
-            margin: 10px;
-            box-sizing: border-box; /* Add this line */
-            transition: width 0.3s ease, height 0.3s ease;
-        }
-            .score::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #4caf50;
-            transform-origin: left;
-            transform: scaleX(var(--percentage, 0));
-            }
+    .results-circle {
+        --border-width: 4px;
+        position: relative;
+        width: 85px;
+        height: 85px;
+        border-radius: 50%;
+        border: var(--border-width) solid #ccc;
+        margin: 10px;
+        box-sizing: border-box; 
+        transition: width 0.4s ease, height 0.4s ease;
+    }
+    .score::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #4caf50;
+        transform-origin: left;
+        transform: scaleX(var(--percentage, 0));
+    }
+
     .result {
             display: flex;
             flex-direction: column;
@@ -332,9 +336,15 @@ button.submit-button:hover {
             }
         }
 
-        @keyframes fill {
+        @keyframes fillgreen {
             to {
                 stroke: #00ff00;
+            }
+        }
+
+        @keyframes fillred {
+            to {
+                stroke: red;
             }
         }
 
@@ -361,18 +371,22 @@ button.submit-button:hover {
             <div class="result">
                 <h4>TTFB</h4>
                     <div class="percentage-circle" id="ttfb-result-circle">
-                        <svg class="circular-chart" viewBox="0 0 36 36">
-                            <path class="circle-bg" d="M18 2.0845
-                                a 15.9155 15.9155 0 0 1 0 31.831
-                                a 15.9155 15.9155 0 0 1 0 -31.831" />
-                        
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            class="circular-chart" viewBox="0 0 100 100">
+                            <!-- Circle background -->
+                            <path class="circle-bg" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90"
+                                />
+                            
                             <!-- Transparent circle with full white border -->
-                            <path class="circle" stroke="#fff" d="M18 2.0845
-                                a 15.9155 15.9155 0 0 1 0 31.831
-                                a 15.9155 15.9155 0 0 1 0 -31.831" />
-                        
+                            <path class="circle" stroke="#fff" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90" />
+                            
                             <!-- Percentage text -->
-                            <text x="18" y="20.5" class="percentage" id="ttfb-result" >0</text>
+                            <text x="50%" y="60%" style="font-size: 18px;"  font-size="54" class="percentage" id="ttfb-result">0</text>
                         </svg>
                     </div>
             </div>
@@ -380,18 +394,23 @@ button.submit-button:hover {
             <div class="result">
                 <h4>FCP</h4>
                 <div class="percentage-circle" id="fcp-result-circle">
-                    <svg class="circular-chart" viewBox="0 0 36 36">
-                        <path class="circle-bg" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
-                    
-                        <!-- Transparent circle with full white border -->
-                        <path class="circle" stroke="#fff" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            class="circular-chart" viewBox="0 0 100 100">
+                            <!-- Circle background -->
+                            <path class="circle-bg" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90"
+                                />
+                            
+                            <!-- Transparent circle with full white border -->
+                            <path class="circle" stroke="#fff" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90" />
+                            
                     
                         <!-- Percentage text -->
-                        <text x="18" y="20.5" class="percentage" id="fcp-result">0</text>
+                        <text x="50%" y="60%" style="font-size: 18px;"  class="percentage" id="fcp-result">0</text>
                     </svg>
                 </div>
             </div>
@@ -401,18 +420,22 @@ button.submit-button:hover {
             <div class="result">
                 <h4>LCP</h4>
                 <div class="percentage-circle" id="lcp-result-circle">
-                    <svg class="circular-chart" viewBox="0 0 36 36">
-                        <path class="circle-bg" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
-                    
-                        <!-- Transparent circle with full white border -->
-                        <path class="circle" stroke="#fff" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
-                    
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            class="circular-chart" viewBox="0 0 100 100">
+                            <!-- Circle background -->
+                            <path class="circle-bg" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90"
+                                />
+                            
+                            <!-- Transparent circle with full white border -->
+                            <path class="circle" stroke="#fff" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90" />
+                            
                         <!-- Percentage text -->
-                        <text x="18" y="20.5" class="percentage">0</text>
+                        <text x="50%" y="60%" style="font-size: 18px;" class="percentage">0</text>
                     </svg>
                 </div>
             </div>
@@ -420,18 +443,22 @@ button.submit-button:hover {
             <div class="result">
                 <h4>Speed</h4>
                 <div class="percentage-circle" id="speed-result-circle">
-                    <svg class="circular-chart" viewBox="0 0 36 36">
-                        <path class="circle-bg" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
-                    
-                        <!-- Transparent circle with full white border -->
-                        <path class="circle" stroke="#fff" d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831" />
-                    
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" 
+                            class="circular-chart" viewBox="0 0 100 100">
+                            <!-- Circle background -->
+                            <path class="circle-bg" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90"
+                                />
+                            
+                            <!-- Transparent circle with full white border -->
+                            <path class="circle" stroke="#fff" d="M50 5
+                                a 45 45 0 0 1 0 90
+                                a 45 45 0 0 1 0 -90" />
+                            
                         <!-- Percentage text -->
-                        <text x="18" y="20.5" class="percentage">0</text>
+                        <text x="50%" y="60%" style="font-size: 18px;"  class="percentage">0</text>
                     </svg>
                 </div>
             </div>
@@ -508,50 +535,75 @@ function calculateScore(metricValue, range1, score1, range2, score2) {
     }
 
     function resizeCircle(id, value) {
-        console.log(value);
-        var circle = document.getElementById(id);
-        var circleBorder = circle.querySelector('.circle');
-        var percentage = Math.max(0, Math.min(100, (value / 5000) * 100)); // Assuming the maximum value is 5000 milliseconds
+        setTimeout(function () {
+            console.log(value);
+            var circle = document.getElementById(id);
+            var circleBorder = circle.querySelector('.circle');
+            var percentage = Math.max(0, Math.min(100, (value / 5000) * 100)); // Assuming the maximum value is 5000 milliseconds
 
-        // Set the stroke-dasharray attribute to control the percentage of the circle that is filled
-        var circumference = 2 * Math.PI * circle.getAttribute('r');
-        var filledLength = (percentage / 100) * circumference;
-        var unfilledLength = circumference - filledLength;
+            // Set the stroke-dasharray attribute to control the percentage of the circle that is filled
+            var circumference = 2 * Math.PI * circle.getAttribute('r');
+            var filledLength = (percentage / 100) * circumference;
+            var unfilledLength = circumference - filledLength;
 
-        // Set the filling animation for the circle border
-        circleBorder.style.transition = 'stroke-dasharray 1s linear, transform 1s linear';
-        circleBorder.style.strokeDasharray = filledLength + ' ' + unfilledLength;
-        circleBorder.style.animation = 'spin 1s linear, fill 1s linear forwards';
+            // Set the filling animation for the circle border
+            circleBorder.style.transition = 'stroke-dasharray 1s linear, transform 1s linear';
+            circleBorder.style.strokeDasharray = filledLength + ' ' + unfilledLength;
+            if(value > 75) {
+                circleBorder.style.animation = 'spin 1s linear, fillgreen 1s linear forwards';
+            } else {
+                circleBorder.style.animation = 'spin 1s linear, fillred 1s linear forwards';
 
+            }
+            
+
+        }, 1000);
+        
         }
 
     function showResult(data) {
         // TTFB
+        var ttfb;
+        var fcp;
+        var lcp;
+
         console.log(data);
         if (data.ttfb) {
             var ttfbValue = data.ttfb.toFixed(3);
-            var ttfbScore = calculateScore(ttfbValue, 600, 100, 5000, 0);
+            ttfbScore = calculateScore(ttfbValue, 600, 100, 5000, 0);
             document.getElementById("ttfb-result").innerHTML = ttfbValue + " ms";
             resizeCircle("ttfb-result-circle", ttfbScore);
         } else if (data.error) {
             document.getElementById("ttfb-result").innerHTML = "Error: " + data.error;
         }
-
+       
         if (data.fcp) {
             console.log(data.fcp + "fcp");
             var fcpValue = data.fcp.toFixed(3);
-            var fcpScore = calculateScore(fcpValue, 1000, 100, 5000, 0); // Update the range and scores as needed
+            fcpScore = calculateScore(lcpValue, 1000, 100, 5000, 0); // Update the range and scores as needed
             document.getElementById("fcp-result").innerHTML = fcpValue + " ms";
             resizeCircle("fcp-result-circle", fcpScore);
         } else if (data.error) {
             document.getElementById("fcp-result").innerHTML = "Error: " + data.error;
+        } else {
+            resizeCircle("fcp-result-circle", 0);
         }
-    
-        // Example: Call this function after fetching the data and calculating the score
-        // updatePercentageCircle('ttfb-result-circle', ttfbScore);
-        // updatePercentageCircle('fcp-result-circle', fcpScore);
-        // updatePercentageCircle('lcp-result-circle', lcpScore);
-        // updatePercentageCircle('speed-result-circle', speedScore);
+
+        
+
+        if (data.lcp) {
+            console.log(data.fcp + "lcp");
+            var lcpValue = data.lcp.toFixed(3);
+            lcpScore = calculateScore(lcpValue, 1000, 100, 5000, 0); // Update the range and scores as needed
+            document.getElementById("lcp-result").innerHTML = lcpValue + " ms";
+            resizeCircle("lcp-result-circle", lcpScore);
+        } else if (data.error) {
+            document.getElementById("lcp-result").innerHTML = "Error: " + data.error;
+        } else {
+            resizeCircle("lcp-result-circle", 0);
+        }
+        
+        resizeCircle("speed-result-circle", 0);   
     }
 
         </script>
